<resources>
    <string name="app_name" translatable="false">Ichaival</string>
    <string name="archive_thumb" translatable="false">thumb</string>
    <string name="archive_label" translatable="false">name</string>
    <string name="random">Random</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_search">Search</string>
    <string name="pref_header_general">General</string>
    <string name="server_address_preference" translatable="false">server_address</string>
    <string name="server_location_name">Server Address</string>
    <string name="clear_cache">Clearing cache…</string>
    <string name="load_previews">Load more thumbs</string>
    <string name="bookmark">Bookmark</string>
    <string name="unbookmark">Unbookmark</string>
    <string name="archive_details">Details</string>
    <string name="archive_gallery">Thumbs</string>
    <string name="read_button">Read</string>
    <string name="tag_header">Tags</string>
    <string name="bookmark_label">Bookmarks</string>
    <string name="detail_menu_item">Details</string>
    <string name="api_key_pref" translatable="false">api_key</string>
    <string name="api_key_pref_name">API Key</string>
    <string name="details_title">Details</string>
    <string name="thumbs_title">Thumbs</string>
    <string name="license_key" translatable="false">licenses</string>
    <string name="gpl_key" translatable="false">gpl</string>
    <string name="git_key" translatable="false">github</string>
    <string name="thumbnail_setting">Clear thumbnail cache</string>
    <string name="thumbnail_pref" translatable="false">clear_thumbs</string>
    <string name="thumbnail_summary">Tap to delete thumbnail cache</string>
    <string name="press_for_tags">Long press for tags</string>
    <string name="first_time_text">Tap to set up server settings.</string>
    <string name="new_checkbox">New</string>
    <plurals name="archive_count">
        <item quantity="one">%d archive</item>
        <item quantity="other">%d archives</item>
    </plurals>
    <string name="failed_image">Failed to Load</string>
    <string name="verbose_pref" translatable="false">verbose_key</string>
    <string name="verbose_pref_name">Verbose Messages</string>
    <string name="verbose_pref_summary">Enable more verbose error messages</string>
    <string name="sort_method">Sort Method</string>
    <string name="alpha_sort">By Name</string>
    <string name="sort_date">By Date Added</string>
    <string name="save_button">Save</string>
    <string name="sort_menu">Sort</string>
    <string name="sort_pref" translatable="false">sort_pref</string>
    <string name="sort_asc">Ascending</string>
    <string name="sort_desc">Descending</string>
    <string name="sort_direction">Direction</string>
    <string name="desc_pref" translatable="false">desc_pref</string>
    <string name="tag_menu">Tags</string>
    <string name="goto_page">Go to Page</string>
    <string name="refresh_menu_item">Force Refresh</string>
    <string name="rtol_pref_key" translatable="false">right to left pref</string>
    <string name="rtol_pref_name">Right to Left Reader</string>
    <string name="reader_pref_header">Reader</string>
    <string name="source_pref_header">Source</string>
    <string name="vol_key_pref_name">Volume Key Navigation</string>
    <string name="vol_key_pref_key" translatable="false">vol_key_pref</string>
    <string name="random_archive">View Random Archive</string>
    <string name="search_header">Search</string>
    <string name="local_search_key" translatable="false">local_search_key</string>
    <string name="local_search_pref">Local Search</string>
    <string name="local_search_sum">Searches using the built-in app search instead of making a request to the server.</string>
    <string name="search_delay_key" translatable="false">search_delay_key</string>
    <string name="search_delay_pref">Search Delay</string>
    <string name="search_delay_summary">Amount of time to wait between key presses before making the search request. Current: %s ms (Default 750 ms)</string>
    <string name="refresh_archive_menu">Refresh Archives</string>
    <string name="swipe_refresh_key" translatable="false">swipe_refresh_key</string>
    <string name="swipe_refresh_pref">Enable Swipe to Refresh</string>
    <string name="scale_type_pref" translatable="false">scale_type_pref</string>
    <string name="scale_type_menu">Scale Type</string>
    <string name="page_scale_type">Fit Page</string>
    <string name="height_scale_type">Fit Height</string>
    <string name="width_scale_type">Fit Width</string>
    <string name="webtoon_scale_type">Webtoon</string>
    <string-array name="scale_types">
        <item>@string/page_scale_type</item>
        <item>@string/height_scale_type</item>
        <item>@string/width_scale_type</item>
        <item>@string/webtoon_scale_type</item>
    </string-array>
    <string name="reader_bg_pref_key">reader_bg_pref</string>
    <string name="reader_bg_pref_title">Background Color</string>
    <string name="black_bg_color">Black</string>
    <string name="white_bg_color">White</string>
    <string name="gray_bg_color">Gray</string>
    <string-array name="reader_bg_colors">
        <item>@string/black_bg_color</item>
        <item>@string/white_bg_color</item>
        <item>@string/gray_bg_color</item>
    </string-array>
    <string name="dark_theme">Dark</string>
    <string name="black_theme">Black</string>
    <string name="white_theme">White</string>
    <string name="material_theme" translatable="false">Material You</string>
    <string-array name="theme_names">
        <item>@string/dark_theme</item>
        <item>@string/black_theme</item>
        <item>@string/material_theme</item>
        <item>@string/white_theme</item>
    </string-array>
    <string name="fullscreen_timeout_key" translatable="false">fullscreen_timeout_key</string>
    <string name="fullscreen_timeout_title">Fullscreen Timeout</string>
    <string name="fullscreen_timeout_summary">The amount of time before hiding the buttons.  -1 for never.  Current: %s seconds</string>
    <string name="sync_time_key" translatable="false">sync_time_key</string>
    <string name="sync_time_title">Sync Time</string>
    <string name="sync_time_summary">The amount of time to wait before automatically syncing with the server.  -1 for never.  Current: %s hours</string>
    <string name="search_header_key" translatable="false">search_header_key</string>
    <string name="category_label">Categories</string>
    <string name="clear_category_button">Clear Category</string>
    <string name="filter_label">Filters</string>
    <string name="temp_folder_pref" translatable="false">temp_folder_pref</string>
    <string name="temp_folder_pref_summary">Clear the server temp folder</string>
    <string name="temp_folder_pref_title">Clear Temp Folder</string>
    <string name="server_pref_header">Server</string>
    <string name="mark_read_item">Mark Read</string>
    <string name="server_header_key" translatable="false">server_header_key</string>
    <string name="refresh_thumb_menu_item">Refresh Thumbnail</string>
    <string name="list_top">Top</string>
    <string name="list_bottom">Bottom</string>
    <string name="debug_settings">Debug</string>
    <string name="log_pref" translatable="false">log_pref</string>
    <string name="log_pref_name">Enable Crash Logging</string>
    <string name="log_save_pref" translatable="false">log_save_pref</string>
    <string name="log_save_summary">Copy crash log to the clipboard</string>
    <string name="log_save_title">Copy Crash Log</string>
    <string name="theme_pref" translatable="false">theme_pref</string>
    <string name="theme_pref_name">Theme</string>
    <string name="add_to_cat_button">Add to Category</string>
    <string name="new_category_button">New Category</string>
    <string name="delete_archive_item">Delete Archive</string>
    <string name="select_archives">Select Archives</string>
    <string name="dualpage_key" translatable="false">dualpage_key</string>
    <string name="dualpage_pref_title">Merge Dual Pages</string>
    <string name="dualpage_pref_summary">Merge portrait images when device is landscape</string>
    <string name="use_thumb">Use as Thumbnail</string>
    <string name="cache_header">Cache</string>
    <string name="local_cache_pref_title">Clear Local Cache</string>
    <string name="local_cache_pref" translatable="false">local_cache_pref</string>
    <plurals name="delete_archive_count">
        <item quantity="one">Delete %d archive?</item>
        <item quantity="other">Delete %d archives?</item>
    </plurals>
    <plurals name="page_count">
        <item quantity="one">%d page</item>
        <item quantity="other">%d pages</item>
    </plurals>
    <string name="png_compress" translatable="false">PNG</string>
    <string name="jpg_compress" translatable="false">JPEG</string>
    <string name="card_view">Card</string>
    <string name="cover_view">Cover</string>
    <string name="png_compress_display">PNG (Slow, High Quality)</string>
    <string name="jpg_compress_display">JPEG (Fast, Decent Quality)</string>
    <string name="compression_type_pref" translatable="false">compression_type_pref</string>
    <string name="compression_pref_title">Merged Page Compression Type</string>
    <string name="swap_merged_page">Swap Pages</string>
    <string name="split_merged_page">Split Page</string>
    <string name="dual_page_swap_title">Invert Merge Direction</string>
    <string name="dual_page_swap_summary">Invert RTL from overall RTL setting</string>
    <string name="dual_page_swap_key" translatable="false">dual_page_swap_key</string>
    <string name="archive_list_type_key" translatable="false">archive_list_type_key</string>
    <string name="archive_list_type_pref_title">List View</string>
    <string name="other_namespace">other</string>
    <string name="category_removed_message">Removed from %1$s.</string>
    <string name="category_remove_message">Remove from %1$s.</string>
    <string name="category_add_message">Added to %1$s.</string>
    <string name="update_thumbnail_message">Thumbnail will be updated after restart.</string>
    <string name="selected_archives">%1$d selected</string>
    <string name="deleted_archive">Deleted "%1$s"</string>
    <string name="delete_archive_prompt">Delete "%1$s"?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="log_delete_message">Log deleted!</string>
    <string name="copy_log_title">Copy Crash log</string>
    <string name="crash_log_subject">Crash Log</string>
    <string name="error_message">Error: %1$s</string>
    <string name="failed_to_connect_message">Failed to connect to server!</string>
    <string name="temp_clear_fail_message">Failed to clear temp folder.</string>
    <string name="category_remove_fail_message">Failed to remove from category.</string>
    <string name="category_create_fail_message">Failed to create category.</string>
    <string name="thumb_set_fail_message">Failed to set new thumbnail.</string>
    <string name="get_archives_fail_message">Error getting archive list</string>
    <string name="archive_extract_fail_message">Failed to extract archive!</string>
    <string name="archive_extract_message">Extracting…</string>
    <string name="category_add_fail_message">Failed to add to category.</string>
    <string name="no_net_connection">No network connection!</string>
    <string name="temp_clear_success_message">Temp folder cleared.</string>
    <string name="no_page_display">Page %1$d</string>
    <string name="single_page_display">Page %1$d/%2$d</string>
    <string name="dual_page_display">Pages %1$d-%2$d/%3$d</string>
    <string name="random_count_menu">Change Count</string>
    <string name="random_header">Random Archives</string>
    <string name="random_count_pref" translatable="false">random_count_pref</string>
</resources>