<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
                  xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <EditTextPreference
            android:defaultValue="localhost:3000"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/server_location_name"
            android:key="@string/server_address_preference"/>

    <Preference android:title="@string/clear_cache">
        <intent android:action="com.example.shaku.ichaival.ClearCacheActivity"/>
    </Preference>
</PreferenceScreen>
