<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Ichaival - Android client for LANraragi https://github.com/Utazukin/Ichaival/
  ~ Copyright (C) 2022 Utazukin
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/detail_button"
        style="?borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_info_black_24dp"
        android:text="@string/detail_menu_item"
        app:icon="@drawable/ic_info_black_24dp"
        app:iconSize="24dp" />

    <Button
        android:id="@+id/goto_button"
        style="?borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_collections_white_24dp"
        android:text="@string/goto_page"
        app:icon="@drawable/ic_collections_white_24dp"
        app:iconSize="24dp" />

    <Button
        android:id="@+id/thumb_button"
        style="?borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_system_update_alt_24"
        android:text="@string/use_thumb"
        app:icon="@drawable/ic_baseline_system_update_alt_24"
        app:iconSize="24dp" />

    <Button
        android:id="@+id/bookmark_button"
        style="?borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_menu"
        android:text="@string/bookmark_label"
        app:icon="@drawable/ic_menu"
        app:iconSize="24dp" />

    <Button
        android:id="@+id/random_archive_button"
        style="?borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_swap_calls_white_24dp"
        android:text="@string/random_archive"
        app:icon="@drawable/ic_swap_calls_white_24dp"
        app:iconSize="24dp" />

    <Button
        android:id="@+id/refresh_button"
        style="?borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_refresh_white_24dp"
        android:text="@string/refresh_menu_item"
        app:icon="@drawable/ic_refresh_white_24dp"
        app:iconSize="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/scale_type_spinner"
            android:text="@string/scale_type_menu"
            android:textSize="18sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/scale_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/scale_types"
            android:backgroundTint="?colorOnSurface"
            android:spinnerMode="dropdown" />
    </LinearLayout>

</LinearLayout>
