<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Ichaival - Android client for LANraragi https://github.com/Utazukin/Ichaival/
  ~ Copyright (C) 2019 Utazukin
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingStart="10dp"
              android:paddingEnd="10dp">

    <TextView
            android:text="@string/sort_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"/>

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/rad_alpha"
            android:id="@+id/sort_group">

        <RadioButton
                android:text="@string/alpha_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rad_alpha"
                android:layout_weight="1"
                android:textSize="18sp"/>

        <RadioButton
                android:text="@string/sort_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rad_date"
                android:layout_weight="1"
                android:textSize="18sp"/>
    </RadioGroup>

    <Button
            android:text="@string/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
</LinearLayout>