<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Ichaival - Android client for LANraragi https://github.com/Utazukin/Ichaival/
  ~ Copyright (C) 2019 Utazukin
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ArchiveDetailsFragment">


    <ImageView
            android:layout_width="wrap_content"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:id="@+id/cover"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="240dp"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:maxWidth="200dp"
            android:minWidth="200dp"
            />

    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/title"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/cover"
            android:layout_marginStart="8dp"
            tools:text="Title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/read_button"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeMaxTextSize="36sp"
            android:layout_marginEnd="8dp"/>

    <Button
            android:text="@string/bookmark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bookmark_button"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="@id/cover"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/cover"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_max="200dp"
            android:layout_marginEnd="8dp"/>

    <Button
            android:text="@string/read_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/read_button"
            app:layout_constraintStart_toEndOf="@id/cover"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@id/bookmark_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_max="200dp"
            android:layout_marginEnd="8dp"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bookmark_button"
            android:layout_marginTop="8dp"
            android:id="@+id/tag_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp">

        <TextView
                android:text="@string/tag_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tag_header"
                android:textSize="24sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
